<6> [460.513190] i915: Performing live selftests with st_random_seed=0xa334af5d st_timeout=500
<6> [460.513195] i915: Running hangcheck
<6> [460.513247] i915: Running intel_hangcheck_live_selftests/igt_hang_sanitycheck
<6> [460.566897] i915: Running intel_hangcheck_live_selftests/igt_reset_nop
<6> [460.579462] pcieport 0000:00:1c.4: AER: Correctable error message received from 0000:02:00.0
<4> [460.579484] nvme 0000:02:00.0: PCIe Bus Error: severity=Correctable, type=Physical Layer, (Receiver ID)
<4> [460.579489] nvme 0000:02:00.0: device [15b7:5006] error status/mask=00000001/0000e000
<4> [460.579494] nvme 0000:02:00.0: [ 0] RxErr
<6> [461.069155] igt_reset_nop: 74 resets
<6> [461.092049] i915: Running intel_hangcheck_live_selftests/igt_reset_nop_engine
<6> [461.593797] igt_reset_nop_engine(rcs0): 413 resets
<6> [461.613688] pcieport 0000:00:1c.4: AER: Correctable error message received from 0000:02:00.0
<4> [461.613751] nvme 0000:02:00.0: PCIe Bus Error: severity=Correctable, type=Physical Layer, (Receiver ID)
<4> [461.613828] nvme 0000:02:00.0: device [15b7:5006] error status/mask=00000001/0000e000
<4> [461.613834] nvme 0000:02:00.0: [ 0] RxErr
<6> [462.096412] igt_reset_nop_engine(bcs0): 519 resets
<6> [462.597183] igt_reset_nop_engine(vcs0): 480 resets
<6> [463.098389] igt_reset_nop_engine(vecs0): 496 resets
<6> [463.117199] i915: Running intel_hangcheck_live_selftests/igt_reset_idle_engine
<3> [463.126159] i915 0000:00:02.0: [drm] *ERROR* GT0: engine workaround lost on application! (reg[7000]=0x0, relevant bits were 0x0 vs expected 0x8000)
<7> [463.312235] i915 0000:00:02.0: [drm:intel_pps_vdd_off_sync_unlocked [i915]] [ENCODER:242:DDI A/PHY A] PPS 0 turning VDD off
<7> [463.312751] i915 0000:00:02.0: [drm:intel_pps_vdd_off_sync_unlocked [i915]] [ENCODER:242:DDI A/PHY A] PPS 0 PP_STATUS: 0x00000000 PP_CONTROL: 0x00000060
<7> [463.313171] i915 0000:00:02.0: [drm:intel_power_well_disable [i915]] disabling AUX_A
<7> [463.314305] i915 0000:00:02.0: [drm:intel_power_well_disable [i915]] disabling DC_off
<7> [463.315090] i915 0000:00:02.0: [drm:skl_enable_dc6 [i915]] Enabling DC6
<7> [463.315240] i915 0000:00:02.0: [drm:icp_irq_handler [i915]] hotplug event received, stat 0x00010000, dig 0x0000088a, pins 0x00000010, long 0x00000010
<7> [463.315487] i915 0000:00:02.0: [drm:gen9_set_dc_state.part.0 [i915]] Setting DC state from 00 to 02
<7> [463.315632] i915 0000:00:02.0: [drm:intel_hpd_irq_handler [i915]] digital hpd on [ENCODER:242:DDI A/PHY A] - long
<7> [463.316153] i915 0000:00:02.0: [drm:intel_hpd_irq_handler [i915]] Received HPD interrupt on PIN 4 - cnt: 10
<7> [463.317361] i915 0000:00:02.0: [drm:intel_dp_hpd_pulse [i915]] ignoring long hpd on eDP [ENCODER:242:DDI A/PHY A]
<6> [463.618895] rcs0: Completed 563 idle resets
<6> [464.122772] bcs0: Completed 196 idle resets
<6> [464.625414] vcs0: Completed 196 idle resets
<6> [464.691111] pcieport 0000:00:1c.4: AER: Correctable error message received from 0000:02:00.0
<4> [464.691130] nvme 0000:02:00.0: PCIe Bus Error: severity=Correctable, type=Physical Layer, (Receiver ID)
<4> [464.691135] nvme 0000:02:00.0: device [15b7:5006] error status/mask=00000001/0000e000
<4> [464.691140] nvme 0000:02:00.0: [ 0] RxErr
<6> [465.127718] vecs0: Completed 196 idle resets
<6> [465.128782] i915: Running intel_hangcheck_live_selftests/igt_reset_active_engine
<6> [465.154393] pcieport 0000:00:1c.4: AER: Correctable error message received from 0000:02:00.0
<4> [465.154414] nvme 0000:02:00.0: PCIe Bus Error: severity=Correctable, type=Physical Layer, (Receiver ID)
<4> [465.154418] nvme 0000:02:00.0: device [15b7:5006] error status/mask=00000001/0000e000
<4> [465.154423] nvme 0000:02:00.0: [ 0] RxErr
<6> [465.631272] rcs0: Completed 166 active resets
<6> [466.133784] bcs0: Completed 177 active resets
<7> [466.357394] i915 0000:00:02.0: [drm:drm_dp_dpcd_access [drm_display_helper]] AUX B/DDI B/PHY B: Too many retries, giving up. First error: -6
<7> [466.524963] i915 0000:00:02.0: [drm:drm_dp_dpcd_access [drm_display_helper]] AUX B/DDI B/PHY B: Too many retries, giving up. First error: -6
<6> [466.637479] vcs0: Completed 153 active resets
<7> [466.705035] i915 0000:00:02.0: [drm:drm_dp_dpcd_access [drm_display_helper]] AUX B/DDI B/PHY B: Too many retries, giving up. First error: -6
<7> [466.883407] i915 0000:00:02.0: [drm:drm_dp_dpcd_access [drm_display_helper]] AUX B/DDI B/PHY B: Too many retries, giving up. First error: -6
<7> [467.065287] i915 0000:00:02.0: [drm:drm_dp_dpcd_access [drm_display_helper]] AUX B/DDI B/PHY B: Too many retries, giving up. First error: -6
<6> [467.141648] vecs0: Completed 151 active resets
<6> [467.166876] i915: Running intel_hangcheck_live_selftests/igt_reset_fail_engine
<7> [467.240150] i915 0000:00:02.0: [drm:drm_dp_dpcd_access [drm_display_helper]] AUX B/DDI B/PHY B: Too many retries, giving up. First error: -6
<7> [467.426164] i915 0000:00:02.0: [drm:drm_dp_dpcd_access [drm_display_helper]] AUX B/DDI B/PHY B: Too many retries, giving up. First error: -6
<7> [467.426399] i915 0000:00:02.0: [drm:intel_power_well_enable [i915]] enabling DC_off
<7> [467.427876] i915 0000:00:02.0: [drm:gen9_set_dc_state.part.0 [i915]] Setting DC state from 02 to 00
<7> [467.428772] i915 0000:00:02.0: [drm:intel_power_well_enable [i915]] enabling AUX_A
<7> [467.429695] i915 0000:00:02.0: [drm:intel_pps_vdd_on_unlocked [i915]] [ENCODER:242:DDI A/PHY A] PPS 0 turning VDD on
<7> [467.430138] i915 0000:00:02.0: [drm:wait_panel_power_cycle [i915]] [ENCODER:242:DDI A/PHY A] PPS 0 wait for panel power cycle
<7> [467.430705] i915 0000:00:02.0: [drm:wait_panel_status [i915]] [ENCODER:242:DDI A/PHY A] PPS 0 mask: 0xb800000f value: 0x00000000 PP_STATUS: 0x00000000 PP_CONTROL: 0x00000060
<7> [467.431108] i915 0000:00:02.0: [drm:intel_pps_vdd_on_unlocked [i915]] Wait complete
<7> [467.431570] i915 0000:00:02.0: [drm:intel_pps_vdd_on_unlocked [i915]] [ENCODER:242:DDI A/PHY A] PPS 0 PP_STATUS: 0x00000000 PP_CONTROL: 0x00000068
<7> [467.431964] i915 0000:00:02.0: [drm:intel_pps_vdd_on_unlocked [i915]] [ENCODER:242:DDI A/PHY A] PPS 0 panel power wasn't enabled
<7> [467.493590] i915 0000:00:02.0: [drm:icp_irq_handler [i915]] hotplug event received, stat 0x00010000, dig 0x0000088a, pins 0x00000010, long 0x00000010
<7> [467.494044] i915 0000:00:02.0: [drm:intel_hpd_irq_handler [i915]] digital hpd on [ENCODER:242:DDI A/PHY A] - long
<7> [467.494423] i915 0000:00:02.0: [drm:intel_hpd_irq_handler [i915]] Received HPD interrupt on PIN 4 - cnt: 10
<7> [467.494824] i915 0000:00:02.0: [drm:intel_dp_hpd_pulse [i915]] ignoring long hpd on eDP [ENCODER:242:DDI A/PHY A]
<6> [467.507148] pcieport 0000:00:1c.4: AER: Correctable error message received from 0000:02:00.0
<4> [467.507165] nvme 0000:02:00.0: PCIe Bus Error: severity=Correctable, type=Physical Layer, (Receiver ID)
<4> [467.507170] nvme 0000:02:00.0: device [15b7:5006] error status/mask=00000001/0000e000
<4> [467.507175] nvme 0000:02:00.0: [ 0] RxErr
<6> [467.667837] igt_reset_fail_engine(rcs0): 432 resets
<6> [467.716152] pcieport 0000:00:1c.4: AER: Correctable error message received from 0000:02:00.0
<4> [467.716171] nvme 0000:02:00.0: PCIe Bus Error: severity=Correctable, type=Physical Layer, (Receiver ID)
<4> [467.716176] nvme 0000:02:00.0: device [15b7:5006] error status/mask=00000001/0000e000
<4> [467.716181] nvme 0000:02:00.0: [ 0] RxErr